Added new modules, Alerts, ListJobs and Jodstatus, at the same time was created scripts for the data injay using Flayway

--- a/API-Spring/src/main/resources/application.properties
+++ b/API-Spring/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost/mycareer?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
