Update secyrity to allow acces public JOBSWEB, add angular tempate

--- a/API-Spring/src/main/resources/application.properties
+++ b/API-Spring/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.jackson.date-format=yyyy-MM-dd
 
+mycareer.origin-allowed=http://localhost:4200
 
-spring.profiles.active=basic-security
+spring.profiles.active=oauth-security
+
