--- a/API-Spring/src/main/resources/application-prod.properties
+++ b/API-Spring/src/main/resources/application-prod.properties
@@ -1,9 +1,11 @@
-algamoney.seguranca.enable-https=true
+mycareer.security.enable-https=true
 
 spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-algamoney.origin-permitida=https://alexpt2000-mycareer.herokuapp.com
+mycareer.origin-allowed=https://alexpt2000-mycareer.herokuapp.com
 
 spring.profiles.active=oauth-security
+
+
