--- a/UI-Angular/JobsWeb/package.json
+++ b/UI-Angular/JobsWeb/package.json
@@ -27,6 +27,7 @@
     "ng2-currency-mask": "^4.1.0",
     "ng2-validation": "^4.2.0",
     "primeng": "^4.3.0",
+    "quill": "^1.3.5",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
