--- a/UI-Angular/JobsWeb/package.json
+++ b/UI-Angular/JobsWeb/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
     "ng2-currency-mask": "^4.1.0",
+    "ng2-toasty": "^4.0.3",
     "ng2-validation": "^4.2.0",
     "primeng": "^4.3.0",
     "quill": "^1.3.5",
