--- a/UI-Angular/JobsAdmin/package.json
+++ b/UI-Angular/JobsAdmin/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.18.1",
     "ng2-currency-mask": "^4.1.0",
     "ng2-toasty": "^4.0.3",
+    "ng2-validation": "^4.2.0",
     "primeng": "^4.1.0",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
