--- a/UI-Angular/JobsAdmin/package.json
+++ b/UI-Angular/JobsAdmin/package.json
@@ -46,6 +46,7 @@
     "ng2-validation": "^4.2.0",
     "primeng": "^4.1.0",
     "protractor": "~5.1.2",
+    "quill": "^1.3.5",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
