--- a/UI-Angular/JobsAdmin/package.json
+++ b/UI-Angular/JobsAdmin/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "angular-star-rating": "^3.0.8",
     "angular2-jwt": "^0.2.3",
     "codelyzer": "~3.0.1",
     "core-js": "^2.4.1",
