--- a/API-Spring/src/main/resources/application-prod.properties
+++ b/API-Spring/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-mycareer.origin-allowed=https://alexpt2000-mycareer.herokuapp.com
+mycareer.origin-allowed=https://mycareer-webadmin.herokuapp.com
 
 spring.profiles.active=oauth-security
 
