API: Implements Swagger to show all resurses on API

--- a/API-Spring/src/main/resources/application-prod.properties
+++ b/API-Spring/src/main/resources/application-prod.properties
@@ -6,6 +6,8 @@ spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 mycareer.origin-allowed=https://mycareer-webadmin.herokuapp.com
 
+server.port=8088
+
 spring.profiles.active=oauth-security
 
 
