--- a/API-Spring/src/main/resources/application.properties
+++ b/API-Spring/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jackson.date-format=yyyy-MM-dd
 
 mycareer.origin-allowed=http://localhost:4200
 
+server.port=8088
 
 spring.profiles.active=oauth-security
 
