--- a/UI-Angular/JobsWeb/package.json
+++ b/UI-Angular/JobsWeb/package.json
@@ -51,10 +51,8 @@
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
   },
-  "devDependencies": {
-
-  },
-  "engines":{
+  "devDependencies": {},
+  "engines": {
     "node": "9.3.0",
     "npm": "5.6.0"
   }
